--- a/intsta.html
+++ b/intsta.html
@@ -8,5 +8,23 @@
 </head>
 <body>
     insta search
+
+
+    <div class="search-bar">
+        <input
+          type="text"
+          id="search-input"
+          placeholder="Search for user"
+        />
+        <button id="search-button">Search</button>
+      </div>
+
+      
+    <div class="cards">
+        <div id="card" class="card">
+          <img src="https://scontent-mxp1-1.cdninstagram.com/v/t51.2885-19/447987442_1649735619191276_5973505240611446096_n.jpg?stp=dst-jpg_e0_s150x150&_nc_ht=scontent-mxp1-1.cdninstagram.com&_nc_cat=108&_nc_ohc=zDW2359EdQ4Q7kNvgGT3oKB&edm=AM7KJZYBAAAA&ccb=7-5&oh=00_AYCGSC1PZcj2OedP8U4UJNZBd8SKRyEJVxKqX5Iz7JZQ4A&oe=6680A8BF&_nc_sid=8ec269" alt="Profile Picture" style="width:100px;height:100px;">
+        </div>
+      </div>
+  
 </body>
 </html>
